--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
-    border: pink 1px solid
-}
+/* * {
+    border: pink 1px solid;
+} */
 
 body {
     width: 100vw;
@@ -10,21 +10,26 @@ body {
     align-items: center;
 }
 
-#grid_container {
-    display: flex;
+.grid_container {
+    display: grid;
+    /* align-items: stretch; */
+    border: 1px black solid;
     height: 500px;
-    width: 500px; 
+    width: 500px;
+
     
 }
 
-#grid_container > div {
-    flex: 1;
+ .grid_container > div {
+    /* flex: 1;
     display:flex;
-    flex-direction: column;
+    flex-direction: column; */
+    border: 1px black solid;
 
 }
-
-.row > .cell {
+/*
+#column > #cell {
     flex: 1;
-}
+    border: 1px black solid;
+} */
 
