added grid sizing input and moved code around

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     width: 100vw;
     height: 100vh;
     display:flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -33,3 +34,6 @@ body {
     border: 1px black solid;
 } */
 
+.grid_Sizing {
+margin-top: 50px;
+}
