--- a/style.css
+++ b/style.css
@@ -1,38 +1,51 @@
-/* * {
-    border: pink 1px solid;
-} */
+* {
+    font-family: 'silk', sans-serif;
+}
+
+@font-face {
+    font-family: silk;
+    src: url(Fonts/slkscr.ttf);
+}
 
 body {
     width: 100vw;
     height: 100vh;
     display:flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
 }
 
+.right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+.left {
+    display: flex;
+    flex-direction: column;
+}
+
+h3 {
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+
+h1 {
+    margin-bottom: 0px;
+}
+
 .grid_container {
     display: grid;
-    /* align-items: stretch; */
     border: 1px black solid;
     height: 500px;
     width: 500px;
-
-    
 }
 
  .grid_container > div {
-    /* flex: 1;
-    display:flex;
-    flex-direction: column; */
     border: 1px black solid;
-
 }
-/*
-#column > #cell {
-    flex: 1;
-    border: 1px black solid;
-} */
 
 .grid_Sizing {
 margin-top: 50px;
