--- a/style.css
+++ b/style.css
@@ -57,4 +57,8 @@ margin-top: 50px;
 button {
     padding: 10px;
     margin: 10px 30px 10px 0;
+    background-color: beige;
+    box-shadow: 10px 10px 5px -4px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 5px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px -4px rgba(0,0,0,0.75);
 }
